[gd_scene load_steps=4 format=3 uid="uid://b33oca8u0eq87"]

[ext_resource type="Script" uid="uid://b4r1pmjta3f5q" path="res://scenes/levels/level.gd" id="1_b2cq8"]
[ext_resource type="PackedScene" uid="uid://2rbs1h5pdxwy" path="res://scenes/user interface/ui.tscn" id="3_b2cq8"]
[ext_resource type="PackedScene" uid="uid://6sn7efihk1aq" path="res://scenes/player/player.tscn" id="4_xb4v1"]

[node name="Level" type="Node2D"]
script = ExtResource("1_b2cq8")

[node name="Decals" type="Node2D" parent="."]

[node name="Ground" type="Node2D" parent="."]

[node name="Infestation" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Enemies" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("4_xb4v1")]
position = Vector2(628, 521)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="Lights" type="Node2D" parent="."]

[node name="UI" parent="." instance=ExtResource("3_b2cq8")]

[connection signal="death" from="Player" to="." method="_on_player_death"]
[connection signal="grenade" from="Player" to="." method="_on_player_grenade"]
[connection signal="laser" from="Player" to="." method="_on_player_laser"]
